2017-11-01  larissa9839  <larissa9839@gmail.com>

	* tryXpath/popup/popup.js:
	Define showDetailsPage function.
	Remove variables. prevDetailsPage, moveDetailsPage, nextDetailsPage.
	Set handlers which manage the details page.

	* tryXpath/scripts/try_xpath_functions.js:
	Define updateDetailsTable function.

	* tryXpath/popup/popup.js:
	Define prevDetailsPage, moveDetailsPage, detailsPageCount
	and nextDetailsPage variables.
	Rename. pageSize -> detailsPageSize
	Rename. pageIndex -> detailsPageIndex

	* tryXpath/popup/popup.html (Results):
	Add some elements.

2017-10-31  larissa9839  <larissa9839@gmail.com>

	* tryXpath/popup/popup.js: 
	Fix the id value. results-detals -> results-details
	Define pageSize constans.
	Define pageIndex variable.

	* tryXpath/popup/popup.html (Results):
	Fix the id value. results-detals -> results-details

	* tryXpath/popup/popup.js:
	Define contextTbody variable.

	* tryXpath/popup/popup.html:
	Add a table.

	* tryXpath/popup/popup.js:
	Define sendExecute function.
	Define handleExprEnter.

	* tryXpath/popup/popup.css (textarea):
	Add "textarea" style.

	* tryXpath/popup/popup.html:
	Chenge some input elements to textarea.


2017-10-26  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_content.js: 
	Rename setContextInfo -> setContentInfo.
	Rename requestSetContextInfo -> requestSetContentInfo.

	* tryXpath/background/try_xpath_background.js:
	Rename requestSetContextInfo -> requestSetContentInfo.
	Rename setContextInfo -> setContentInfo.

2017-10-14  larissa9839  <larissa9839@gmail.com>

	* tryXpath/manifest.json:
	"strict_min_version": "55.0.0" -> "52.0"

2017-10-12  larissa9839  <larissa9839@gmail.com>

	* tryXpath/css/try_xpath_insert.css:
	Modify some css.
	Add the css which related [data-tryxpath-frame-ancestor] selector.

2017-10-11  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_content.js:
	Modify setMainAttrs to set frameAncestor attribute.
