@@ -10,6 +10,11 @@ h1 {
     border-bottom: solid 3px rgb(128,128,128);
 }
 
+h2 {
+    font-size: 100%;
+    border-bottom: solid 1px rgb(128,128,128);
+}
+
 dl {
     overflow: hidden;
 }
