@@ -90,13 +90,13 @@
   <div>Message: <span id="results-message"></span></div>
   <div>Count: <span id="results-count"></span></div>
   <div><button id="show-all-results">Show all results</button><button id="open-options">Open options</button><button id="set-style">Set style</button><button id="reset-style">Reset style</button></div>
+  <h2>Context detail</h2>
   <table id="context-detail">
-    <caption>Context detail</caption>
     <tbody></tbody>
   </table>
+  <h2>Details</h2>
   <div><button id="previous-details-page">&lt;</button><button id="move-details-page">Move</button><input type="text" id="details-page-count"><button id="next-details-page">&gt;</button></div>
   <table id="results-details">
-    <caption>Details</caption>
     <tbody></tbody>
   </table>
 </div>
