@@ -1,5 +1,9 @@
 2017-11-01  larissa9839  <larissa9839@gmail.com>
 
+	* tryXpath/popup/popup.html (Details):
+	Remove caption elements.
+	Add h2 elements.
+
 	* tryXpath/popup/popup.js:
 	Define showDetailsPage function.
 	Remove variables. prevDetailsPage, moveDetailsPage, nextDetailsPage.
